--- a/NoAmii.cbp
+++ b/NoAmii.cbp
@@ -7,6 +7,14 @@
 		<Option pch_mode="2" />
 		<Option compiler="gnu_gcc_compiler_for_3ds" />
 		<Option check_files="0" />
+		<MakeCommands>
+			<Build command="$make -f $makefile $target" />
+			<CompileFile command="$make -f $makefile $file" />
+			<Clean command="$make -f $makefile clean" />
+			<DistClean command="$make -f $makefile distclean$target" />
+			<AskRebuildNeeded command="$make -q -f $makefile $target" />
+			<SilentBuild command="$make -f $makefile $target &gt; $(CMD_NULL)" />
+		</MakeCommands>
 		<Build>
 			<Target title="all">
 				<Option output="bin/Debug/NoAmii" prefix_auto="1" extension_auto="1" />
@@ -16,13 +24,57 @@
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<MakeCommands>
+					<Build command="$make -f $makefile $target" />
+					<CompileFile command="$make -f $makefile $file" />
+					<Clean command="$make -f $makefile clean" />
+					<DistClean command="$make -f $makefile distclean$target" />
+					<AskRebuildNeeded command="$make -q -f $makefile $target" />
+					<SilentBuild command="$make -f $makefile $target &gt; $(CMD_NULL)" />
+				</MakeCommands>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="source/csvc.h" />
+		<Unit filename="source/csvc.s" />
+		<Unit filename="source/draw.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/draw.h" />
+		<Unit filename="source/fmt.h" />
+		<Unit filename="source/font.h" />
+		<Unit filename="source/ifile.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/ifile.h" />
+		<Unit filename="source/input.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/input.h" />
+		<Unit filename="source/logger.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/logger.h" />
+		<Unit filename="source/main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/service.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/service.h" />
+		<Unit filename="source/srvsys.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="source/srvsys.h" />
+		<Unit filename="source/utils.h" />
 		<Extensions>
-			<code_completion />
+			<code_completion>
+				<search_path add="D:\Dev\3ds\NoAmii\amitool\include" />
+				<search_path add="D:\Dev\3ds\NoAmii\" />
+				<search_path add="D:\Dev\3ds\NoAmii\amitool" />
+			</code_completion>
 			<envvars />
 			<debugger />
 		</Extensions>
